# shooty

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
shooty-client/: index.html  package-lock.json  package.json
shooty-client/src/: App.css  App.tsx  index.css  level.tsx  player.tsx  rays.tsx
shooty-client/src/game/: level.tsx  player.tsx  rays.tsx
src/: game.rs  level.rs  main.rs  player.rs
web/: index.html  level.js  main.js  package-lock.json  package.json  player.js  rays.js  style.css
