[package]
name = "shooty"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
rand = "0.8.5"
rmpv = { version = "1.3.0", features = ["with-serde"]}
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0"
socketioxide = { version = "0.15.0", features = [
    "tracing",
    "msgpack",
] }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.0", default-features = false }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
